# Tomo

./: .clang_complete  .gitignore  .gitmodules  CMakeLists.txt  Jamroot.jam  README.BUILD  README.md  boost-build.jam.template  bootstrap.sh  cmake.sh  draw.py  gcode.py
doc/: tomo.doxygen
include/tomo/: BoundingBox.hpp  Bounds.hpp  Camera.hpp  Color.hpp  Compound.hpp  Coord.hpp  Firmware.hpp  FrameBuffer.hpp  GCode.hpp  GCodeGenerator.hpp  IMouse.hpp  Image.hpp  Isle.hpp  KDTree.hpp  Light.hpp  LineSegment.hpp  Matrix.hpp  Mesh.hpp  MeshReader.hpp  MeshWriter.hpp  OFFReader.hpp  OFFWriter.hpp  Object.hpp  Plane.hpp  PlaneStack.hpp  Point.hpp  PointCloud.hpp  PolarVec.hpp  Primitive.hpp  PrintBounds.hpp  Ray.hpp  Route.hpp  Scene.hpp  SceneObject.hpp  Shader.hpp  SlicableObject.hpp  Slice.hpp  Slicer.hpp  Sphere.hpp  SphericalTracker.hpp  (+12 more)
include/tomo/draw/: DrawInterface.hpp
include/tomo/draw/magick/: Wrapper.hpp
include/tomo/geometry/: Mesh.hpp  Model.hpp  PointCloud.hpp
include/tomo/geometry/algorithm/: BoundingSegments.hpp  Chop.hpp  ForEachRing.hpp  PolygonOffset.hpp  RingOffset.hpp  Unify.hpp  sqrDistance.hpp
include/tomo/geometry/algorithms/: Intersect.hpp  KDNodeIntersect.hpp  KDNodeVsConnectableSegment.hpp  RayIntersector.hpp  RayVsBoundingBox.hpp  RayVsLineSegment.hpp  RayVsPlane.hpp  RayVsSphere.hpp  RingIterationFunction.hpp  RingSection.hpp
include/tomo/geometry/aux/: Bounds.hpp  Compound.hpp  KDNode.hpp  KDNodeGeometry.hpp  KDNodeIntersectResult.hpp  KDTree.hpp  Median.hpp  PolygonSorter.hpp  Ray.hpp  Visitor.hpp
include/tomo/geometry/aux/visitor/: InRadius.hpp  KNearest.hpp  Nearest.hpp  RayTraversal.hpp
include/tomo/geometry/base/: Bounds.hpp  Color.hpp  Coord.hpp  Matrix.hpp  Point.hpp  PolarVec.hpp  Ray.hpp  Vec.hpp  Vector.hpp
include/tomo/geometry/comp/: Compound.hpp  Mesh.hpp  PlaneStack.hpp  PointCloud.hpp
include/tomo/geometry/distance/: PointBounds.hpp  PointPoint.hpp  SegmentBounds.hpp  SegmentSegmentPointOnly.hpp  VertexBounds.hpp  VertexVertex.hpp
include/tomo/geometry/intersect/: PointNode.hpp  RaySegment.hpp  SegmentNode.hpp  SegmentNodePointOnly.hpp  SegmentNodePointyOnly.hpp  SegmentNodePointyOnly.hpp~  SegmentsMultiPolygon.hpp  VertexNode.hpp
include/tomo/geometry/intersect/detail/: SegmentsFromMarkers.hpp
include/tomo/geometry/kd/: BuildPolicy.hpp  BuildState.hpp  BuildState.hpp~  ContainedNode.hpp  Node.hpp  NodeGeometry.hpp  NodeIntersect.hpp  NodeIntersectResult.hpp  NodeVsConnectableSegment.hpp  NodeVsSegment.hpp  SplitPolicy.hpp~  StaticContainer.hpp  StaticContainer.hpp~  Tree.hpp  Visitor.hpp
include/tomo/geometry/kd/coeff/: Node.hpp
include/tomo/geometry/kd/nearest/: BuildPolicy.hpp  BuildState.hpp  Node.hpp  SegmentPointTree.hpp  StaticContainer.hpp  StaticPrimitivePtrContainer.hpp  Tree.hpp  VertexTree.hpp  Visitor.hpp  nodeIntersection.hpp  splitCost.hpp
include/tomo/geometry/kd/object/: BuildPolicy.hpp  BuildState.hpp  BuildState.hpp~  Node.hpp  SegmentMarkers.hpp  SegmentTree.hpp  StaticContainer.hpp  Tree.hpp  nodeIntersection.hpp  splitCost.hpp
include/tomo/geometry/kd/split/: Candidate.hpp  CostFunction.hpp  DominantAxis.hpp  Half.hpp  pos.hpp
include/tomo/geometry/kd/visitor/: InRadius.hpp  KNearest.hpp  Nearest.hpp  RayTraversal.hpp  SegmentFunctors.hpp  SegmentMarkers.hpp  (+3 more)
include/tomo/geometry/prim/: BoundingBox.hpp  Box.hpp  ConnectableSegment.hpp  LineSegment.hpp  LineString.hpp  MultiPolygon.hpp  Plane.hpp  Polygon.hpp  Primitive.hpp  Ring.hpp  Segment.hpp  Sphere.hpp  Triangle.hpp  Tube.hpp  Vertex.hpp
include/tomo/scene/: Camera.hpp  Light.hpp  ObjectPlacer.hpp  PrintBounds.hpp  Tracker.hpp  anim.hpp
include/tomo/slicing/: Action.hpp  ActionGroup.hpp  Filling.hpp  LineAction.hpp  LineFilling.hpp  LineSegmentPlane.hpp  Operation.hpp  Perimeter.hpp  PlaneStack.hpp  Procedure.hpp  RepRapState.hpp  SegmentConnector.hpp  SegmentStack.hpp  Skirt.hpp  SlicableObject.hpp  Slice.hpp  SliceStack.hpp  Slicer.hpp  TriangleSlicer.hpp
include/tomo/slicing/filling/: Filling.hpp  LineFilling.hpp  LinePattern.hpp
include/tomo/slicing/perimeter/: Perimeter.hpp
src/OpenMesh/: Jamfile.jam
src/app/debugslicer/: DebugSlicer.hpp  debugslicer.cpp
src/cg2ex1/: MainWindow.cpp  MainWindow.h  MainWindow.ui  glwidget.cpp  glwidget.h  render.hpp  ui_MainWindow.h
src/lib/: BoundingBox.cpp  Bounds.cpp  Box.cpp  Camera.cpp  Jamfile.jam  LineSegment.cpp  LineSegmentPlane.cpp  Mesh.cpp  MultiPolygon.cpp  OFFReader.cpp  OFFWriter.cpp  ObjectPlacer.cpp  Plane.cpp  PointCloud.cpp  Polygon.cpp  PolygonSorter.cpp  Ray.cpp  Ring.cpp  SegmentConnector.cpp  SegmentStack.cpp  Slice.cpp  SliceStack.cpp  Slicer.cpp  Sphere.cpp  Triangle.cpp  TriangleMesh.cpp  Tube.cpp  Vector.cpp  Vertex.cpp  Voxels.cpp  image.cpp  scene.cpp  shader.cpp
src/test/: Benchmark.cpp  BenchmarkDefs.hpp  BoostTimerWrapper.cpp  BoostTimerWrapper.hpp  CompoundTest.cpp  DataGeneration.hpp  GCodeTest.cpp  Jamfile.jam  LineFillingTest.hpp  LineSegmentConnectingTest.hpp  MagickWrapper.hpp  MeshTest.cpp  NearestVisitorsTest.hpp  PerimeterTest.hpp  PolygonTest.cpp  ProcedureTest.cpp  RingTest.cpp  RingTest.hpp  SequencingTest.hpp  SkirtTest.hpp  TestData.cpp  TomoBenchmark.hpp  TomoTestCase.hpp  ToolchainTest.hpp  TriangleSlice.cpp  TriangleSlicerTest.hpp  TriangleSlicingTest.hpp  UnitTests.cpp  VectorTest.cpp  mediantest.cpp  pointCloudTest.cpp  wrap_boost_geometry_begin.hpp  wrap_boost_geometry_end.hpp  wrap_boost_test_begin.hpp  wrap_boost_test_end.hpp
src/test/generators/: Generator.hpp  LineFilling.hpp  Matrix.hpp  MultiPolygonGenerator.hpp  Perimeter.hpp  PolygonOffset.hpp  RingGenerator.hpp  Segments.hpp  Skirt.hpp  TriangleSlicer.hpp  VertexNearestVisitors.hpp
src/test/generators/create/: circle.hpp  circleWith3Holes.hpp  irregular.hpp
src/test/tests/: Chop.hpp  GCodeTest.hpp  KDTree.hpp  LineFilling.hpp  Matrix.hpp  Perimeter.hpp  PolygonOffset.hpp  PolygonSortingTest.hpp  SegmentConnector.hpp  Skirt.hpp  TriangleSlicer.hpp  VertexNearestVisitors.hpp
src/wilston_pg/: MainWindow.cpp  glwidget.cpp  main.cpp
testdata/: README
(+11 files in other folders)
